other/rec-req/require-emptydir-requests-limits/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-emptydir-requests-and-limits
policies:
- ../require-emptydir-requests-limits.yaml
resources:
- resource-fail.yaml
- resource-pass.yaml
- resource-skip.yaml
results:
- kind: Pod
  policy: require-emptydir-requests-and-limits
  resources:
  - fail-pod
  result: fail
  rule: check-emptydir-requests-limits
- kind: Pod
  policy: require-emptydir-requests-and-limits
  resources:
  - pass-pod
  result: pass
  rule: check-emptydir-requests-limits
- kind: Pod
  policy: require-emptydir-requests-and-limits
  resources:
  - skip-pod
  result: skip
  rule: check-emptydir-requests-limits
variables: values.yaml
