other/rec-req/require-emptydir-requests-limits/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: require-emptydir-requests-and-limits
  resources:
  - name: bad-pod
    values:
      request.operation: UPDATE
